--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-MONGO_HOST=localhost
-MONGO_PORT=1234
-MONGO_DB=db_name
-PORT=5000
+APP_PORT=value
+
+MONGO_PROTOCOL=value
+MONGO_PORT=value
+MONGO_USER=value
+MONGO_PW=value
+MONGO_HOST=value
+MONGO_DEFAULT_DB=value
+
