--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ bidict==0.21.3
 click==8.0.1
 colorama==0.4.4
 dnspython==1.16.0
-eventlet==0.30.2
 Flask==2.0.1
-Flask-Cors==3.0.10
 Flask-SocketIO==5.1.1
+gevent==21.8.0
+gevent-websocket==0.10.1
 greenlet==1.1.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
