--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 bidict==0.21.3
+cffi==1.15.0
 click==8.0.1
 colorama==0.4.4
+dataclasses-json==0.5.6
 dnspython==1.16.0
 Flask==2.0.1
 Flask-SocketIO==5.1.1
@@ -11,9 +13,17 @@ gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+marshmallow==3.14.0
+marshmallow-enum==1.5.1
+mypy-extensions==0.4.3
+pycparser==2.20
 pymongo==3.12.0
 python-dotenv==0.19.0
 python-engineio==4.2.1
 python-socketio==5.4.0
 six==1.16.0
+typing-extensions==3.10.0.2
+typing-inspect==0.7.1
 Werkzeug==2.0.1
+zope.event==4.5.0
+zope.interface==5.4.0
